feat: initial app with React

--- a/src/index.html
+++ b/src/index.html
@@ -3,11 +3,12 @@
 
 <head>
   <meta charset="utf-8" />
-  <title>My First Parcel App</title>
+  <title>My First Parcel App with React</title>
 </head>
 
 <body>
-  <h1>Hello, World!</h1>
+  <div id="swagger-ui"></div>
+  <script type="module" src="index.js"></script>
 </body>
 
 </html>
