--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
 
 <body>
   <div id="swagger-ui"></div>
-  <script type="module" src="index.js"></script>
+  <script type="module" src="initializer.js"></script>
 </body>
 
 </html>
